--- a/app/scss/partials/grids.scss
+++ b/app/scss/partials/grids.scss
@@ -227,23 +227,20 @@ body {
 }
 
 /* modal.html grid */
-.modal-submission {
-  grid-template-columns: repeat(1, 1fr);
-  grid-template-rows: repeat(4, 1fr);
+.modal-content {
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(1, 1fr);
   display: grid;
-  grid-template-areas: "modal-name" "modal-eta" "modal-note" "modal-submit"; }
+  grid-template-areas: "addnew loadnew"
+                       "cancel cancel"; }
 
-.modal-title {
-  grid-area: modal-title; }
+.modal-addnew {
+  grid-area: addnew;
+}
 
-.modal-name {
-  grid-area: modal-name; }
-
-.modal-eta {
-  grid-area: modal-eta; }
-
-.modal-note {
-  grid-area: modal-note; }
-
-.modal-submit {
-  grid-area: modal-submit; }
+.modal-loadnew {
+  grid-area: loadnew;
+}
+.modal-cancel {
+  grid-area: cancel;
+}
