--- a/app/scss/partials/index.scss
+++ b/app/scss/partials/index.scss
@@ -17,7 +17,7 @@ body {
 
 .logo {
     background-color: #202225;
-    background-image: url('../asset/Contorga_logo_min_v2.png');
+    background-image: url('../asset/Contorga_logo_min.png');
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
@@ -71,7 +71,7 @@ body {
 
 .title {
     @include not-selectable;
-    background-color: $base-title-color;
+    background-color: $modal-button-color-2;
     color: $base-font-color;
     text-transform: capitalize;
     font-weight: bold;
@@ -101,6 +101,7 @@ body {
 .grid-search {
     top: 50%;
     transform: translateY(50%);
+    margin-left: 4px;
     float: left;
     width: auto;
 }
@@ -123,7 +124,7 @@ body {
 .btn {
     @include not-selectable;
     border: 2px solid #fff;
-	color: #fff;
+	color: $modal-button-color-2;
 	background: none;
     cursor: pointer;
 	display: block;
@@ -149,7 +150,7 @@ body {
 .listbtn {
     background-image: url('../asset/shipentry.png');
     background-repeat: no-repeat;
-    background-size: 20px 20px;
+    background-size: 24px 24px;
     background-position: top;
     height: 50px;
     width: 85%;
@@ -162,7 +163,7 @@ body {
 .listbtn:active {
     background-image: url('../asset/shipentry_dark.png');
     background-repeat: no-repeat;
-    background-size: 32px 32px;
+    background-size: 24px 24px;
     background-position: top;
 }
 .tablebtn {
@@ -183,7 +184,8 @@ body {
 }
 
 .tableaddbtn {
-    margin: 4px auto 4px auto;
+    margin: 2px auto 2px auto;
+    color: #fff;
 }
 
 .tablebtn:focus {
@@ -241,12 +243,17 @@ th.active .arrow {
 }
 
 select {
+    display: block;
+    -moz-box-sizing: content-box;
+    -webkit-box-sizing:content-box;
+    box-sizing:content-box;
+    height: 15px;
     background-color: $input-color;
-    width: 100%;
+    width: 95%;
     border: 0;
     color: #333447;
     padding: 2px;
-    margin: 0;
+    margin: 3px;
     font-weight: bold;
 }
 
@@ -257,7 +264,7 @@ select {
 }
 input {
     background-color: $input-color;
-    width: 100%;
+    width: 95%;
     border: 0;
     color: #333447;
     padding: 2px;
