--- a/app/scss/modules/colors.scss
+++ b/app/scss/modules/colors.scss
@@ -6,3 +6,5 @@ $base-font-color: #333447;
 $footer-main-wrap-color: #484B51;
 
 $input-color: #e8eeef;
+$modal-button-color-1: #7289DA;
+$modal-button-color-2: #3CA374;
