--- a/app/scss/modules/colors.scss
+++ b/app/scss/modules/colors.scss
@@ -3,6 +3,9 @@
 $base-title-color: #B9C300;
 $base-font-color: #333447;
 
+$sidebar-main-color: #202225;
+$sidebar-active-btn: #41454d;
+
 $footer-main-wrap-color: #484B51;
 
 $input-color: #e8eeef;
