--- a/app/scss/partials/modal.scss
+++ b/app/scss/partials/modal.scss
@@ -1,48 +1,17 @@
 body {
     background: #2f3136;
-    opacity: 0.8;
-}
-#modal{
-    -webkit-app-region: drag;
-}
-
-.modalinput {
-    -webkit-app-region: no-drag;
-    background-color: #e8eeef;
-    border: 0;
-    border-radius: 4px;
-    color: #8a97a0;
-    padding: 8px;
-    margin: auto 5px 2px 5px;
-    font-weight: bolder;
-    width: 90%;
 }
 
 .modal-content {
-    -webkit-app-region: drag;
-}
-
-.modalinput input[type=text] {
-    -webkit-app-region: no-drag;
-    font-weight: bold
-}
-
-.modalsubmit {
-    -webkit-app-region: no-drag;
-    padding: 8px;
-    display: block;
-    margin: 14px auto 14px auto;
-    width: 90%;
+    height: 100vh;
+    width: 100vw;
 }
 
 .modalbtn {
-    -webkit-user-select: auto;
-    -webkit-app-region: no-drag;
     color: #fff;
     display: block;
-    padding: 10px;
-    width: 98%;
-    height: 95%;
+    width: 100%;
+    height: 100%;
     margin-left: auto;
     margin-right: auto;
     text-align:center;
@@ -51,18 +20,12 @@ body {
 
 .addnewbtn {
     background-color: $modal-button-color-1;
-    
+    border-right: 0;
 }
 
 .loadnewbtn {
     background-color: $modal-button-color-2;
 }
 .cancelbtn {
-    margin: 4px;
-    
-    vertical-align: bottom;
-}
-
-.cancelbtn {
-
+    border-top: 0;
 }
