--- a/app/scss/partials/grids.scss
+++ b/app/scss/partials/grids.scss
@@ -229,10 +229,11 @@ body {
 /* modal.html grid */
 .modal-content {
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(1, 1fr);
+  grid-template-rows: repeat(2, 1fr);
   display: grid;
   grid-template-areas: "addnew loadnew"
-                       "cancel cancel"; }
+                       "cancel cancel"; 
+}
 
 .modal-addnew {
   grid-area: addnew;
