--- a/app/scss/partials/index.scss
+++ b/app/scss/partials/index.scss
@@ -26,7 +26,7 @@ body {
 .grid-sidebar {
     border-right: 1px solid #000;
     text-transform: uppercase;
-    background-color: #202225;
+    background-color: $sidebar-main-color;
 }
 
 .grid-sidebar-wrap {
@@ -122,7 +122,7 @@ body {
     float: right;
 }
 .btn {
-    @include not-selectable;
+    
     border: 2px solid #fff;
 	color: $modal-button-color-2;
 	background: none;
@@ -134,11 +134,7 @@ body {
 	transition: all 0.3s;
 }
 
-.btn:hover,
-.btn:active {
-	color: #333447;
-	background: #fff;
-}
+
 
 .addbtn {
     font-size: 2.5em;
@@ -165,6 +161,17 @@ body {
     background-repeat: no-repeat;
     background-size: 24px 24px;
     background-position: top;
+}
+
+.listbtn.active {
+    background-color: $sidebar-active-btn;
+}
+
+
+.btn:hover,
+.btn:active {
+	color: #333447;
+	background-color: #fff !important;
 }
 .tablebtn {
     background-image: url('../asset/deleteButton.png');
@@ -199,12 +206,12 @@ body {
 }
 
 .table-wrap {
-    border: 1px solid #fff;
+    border: 2px solid #fff;
 }
 
 .table-head {
     @include not-selectable;
-    border: 1px solid #fff;
+    border-bottom: 1px solid #fff;
     background-color: $footer-main-wrap-color;
     color: #fff;
     cursor: pointer;
@@ -288,7 +295,6 @@ input {
 
 .table-list {
     overflow: hidden; 
-    padding-right: 17px;
     overflow-y:scroll;
     -webkit-overflow-scrolling: touch;
     padding: 0;
@@ -301,7 +307,6 @@ input {
 ul {
     list-style-type: none;
     overflow: hidden; 
-    padding-right: 17px;
     overflow-y:scroll;
     -webkit-overflow-scrolling: touch;
     padding: 0;
