--- a/app/scss/modules/colors.scss
+++ b/app/scss/modules/colors.scss
@@ -1,7 +1,7 @@
 //all colors that are being used in this project
 
 $base-title-color: #B9C300;
-$base-font-color: #333447;
+$base-font-color: #41425c;
 
 $sidebar-main-color: #202225;
 $sidebar-active-btn: #41454d;
